<resources>
    <string name="app_name">nbc_base</string>
    <string name="id_hint">아이디를 입력하세요.</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_hint">비밀번호를 입력하세요.</string>
    <string name="signIn">로그인</string>
    <string name="signUp">회원가입</string>
    <string name="name_hint">이름을 입력하세요.</string>
    <string name="name">이름</string>
    <string name="exit">종료</string>
    <string name="age">나이</string>
    <string name="age_hint">나이를 입력해주세요.</string>
</resources>